--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "author": "Ekaterina Volkova",
   "license": "ISC",
   "dependencies": {
-    "commander": "^12.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "commander": "^12.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21"
   }
 }
