--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Ekaterina Volkova",
   "license": "ISC",
   "dependencies": {
-    "commander": "^12.0.0"
+    "commander": "^12.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -22,7 +23,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.7.0",
-    "lodash": "^4.17.21"
+    "jest": "^29.7.0"
   }
 }
