--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/katerinavolkova2609/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/katerinavolkova2609/frontend-project-46/actions)",
+  "description": "Data Difference Calculator",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Ekaterina Volkova",
   "license": "ISC",
